// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoCard renders info card correctly 1`] = `
<div
  className="sc-AxjAm cFVyGa"
  data-testid="info-card"
>
  <div
    className="sc-AxirZ kEmsgL"
  >
    <h5
      className="sc-AxhCb pwsED"
      data-testid="info-card-title"
    >
      Title
    </h5>
    <hr
      className="sc-AxiKw cwDgDy"
    />
    <p
      className="sc-AxhUy qxWOA"
    >
      info 1
    </p>
    <p
      className="sc-AxhUy qxWOA"
    >
      info 2
    </p>
    <p
      className="sc-AxhUy qxWOA"
    >
      info 3
    </p>
  </div>
</div>
`;

exports[`InfoCard renders info card correctly when disabled 1`] = `
<div
  className="sc-AxjAm cFVyGa disabled"
  data-testid="info-card"
>
  <div
    className="sc-AxirZ kEmsgL"
  >
    <h5
      className="sc-AxhCb pwsED"
      data-testid="info-card-title"
    >
      Title
    </h5>
    <hr
      className="sc-AxiKw cwDgDy"
    />
    <p
      className="sc-AxgMl kdZbdo"
    >
      disabled
    </p>
    <p
      className="sc-AxhUy qxWOA"
    >
      info 1
    </p>
    <p
      className="sc-AxhUy qxWOA"
    >
      info 2
    </p>
    <p
      className="sc-AxhUy qxWOA"
    >
      info 3
    </p>
  </div>
</div>
`;
